--- a/Views/Blog/CreateBlog.cshtml
+++ b/Views/Blog/CreateBlog.cshtml
@@ -6,10 +6,10 @@
 
 <h2>CreateBlog</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("CreateBlog", "Blog", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Blogs</h4>
         <hr />
@@ -30,11 +30,16 @@
             </div>
         </div>
 
- 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="file" name="Image" class="btn btn-default" />
             </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
         </div>
     </div>
 }
